--- a/estilos/style.css
+++ b/estilos/style.css
@@ -3,5 +3,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap');
 
 * {
-    font-family: ;
+    font-f;
 }
