inicio do projeto 15%

--- a/estilos/style.css
+++ b/estilos/style.css
@@ -2,6 +2,13 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap');
 
-* {
-    font-f;
+:root {
+    --azul1: #1A7FBD;
+    --azul2: #A4DCFF;
+    --preto: #000;
+    --branco: #FFF;
+}
+
+body {
+    background-color: var(--preto);
 }
