--- a/estilos/style.css
+++ b/estilos/style.css
@@ -1,14 +1,5 @@
 @charset "UTF-8";
 
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap');
-
-:root {
-    --azul1: #1A7FBD;
-    --azul2: #A4DCFF;
-    --preto: #000;
-    --branco: #FFF;
-}
-
-body {
-    background-color: var(--preto);
+* {
+    background-color: lightblue;
 }
