--- a/estilos/style.css
+++ b/estilos/style.css
@@ -20,7 +20,7 @@ html, body {
     max-width: 1000px;
     background-image: url(../Assets_Netuno/bannertopo.png);
     background-repeat: no-repeat;
-    background-position: right -220px top 10px;
+    background-position: right -200px top 10px;
 }
 
 main {
@@ -57,36 +57,54 @@ nav > .link {
     font-weight: bold;
 }
 
-section > form {
-    position: absolute;
-    left: 930px;
-    top: 180px;
-    background-color: var(--cor4);
-    border-radius: 15px;
-    width: 400px;
-    height: 700px;
-}
-
-form > h1 {
-    position: absolute;
-    top: 30px;
-    left: 35px;
-    color: rgb(203, 193, 193);
-}
-
 form > p {
-    color: var(--cor1);
-    position: relative;
-    top: 60px;
-    right: 60px;
-}
+    color: var(--cor001);
+    margin: 15px;
+    }
 
-#formulario {
-    background-color: var(--cor1);
-    position: relative;
-    top: 200px;
-    height: 170px;
-}
+    small > p {
+        color: var(--cor1);
+        padding: 20px;
+    }
+
+    form {
+        position: absolute;
+        left: 60%;
+        top: 30%;
+        background-color: var(--cor4);
+        padding: 15px;
+        height: 600px;
+        width: 370px;
+        border-radius: 13PX;
+        box-shadow: 3px 3px 8px rgba(230, 227, 227, 0.296)
+    }
+
+    section#formulario {
+        padding: 50px;
+    }
+
+    #dev1 {
+        position: relative;
+        top: 250px; 
+    }
+
+    legend > p {
+        color: var(--cor4);
+        position: absolute;
+        top: 20px;
+    }
+
+    form > section {
+        background-color: var(--cor1);
+        color: var(--cor004);
+        padding: 50px;
+        margin: 0px -15px 30px -15px;
+        text-align: justify; 
+        position: absolute;
+        top: 250px;
+        width: 370px;
+        
+    }
 
 section > img {
     position: relative;
@@ -424,7 +442,7 @@ button > p > strong {
     color: var(--cor4);
     position: relative;
     top: 1250px;
-    left: 670px;
+    left: 660px;
     right: 150px;
 }
 
@@ -474,11 +492,104 @@ button > p > strong {
     box-shadow: 6px 10px 13px 0px rgba(0, 0, 0, 0.248);
 }
 
-#parte6#lala {
+footer {
     background-color: var(--cor3);
     color: var(--cor4);
-
+    position: relative;
+    padding: 130px;
+    top: 1680px;
+    width: 1259px;
 }
+
+#imgf {
+    position: relative;
+    top: -20px;
+    left: 170px;
+}
+
+#social {
+    position: relative;
+    height: 18px;
+    margin: 5px;
+    top: 18px;
+    left: -26px;
+}
+
+footer > h3 {
+    position: absolute;
+    font-size: 0.6em;
+    top: 220px;
+    left: 300px;
+}
+
+#botao3 {
+    position: absolute;
+    top: 120px;
+    left: 640px;
+    width: 150px;
+    height: 45px;
+    border-radius: 7px;
+    background-color: var(--cor4);
+    color: var(--cor3);
+    font-weight: bold;
+}
+
+footer > ul {
+    position: absolute;
+    left: 890px;
+    top: 100px;
+}
+
+#p1 {
+    position: absolute;
+    top: 20px;
+    width: 70px;
+    color: var(--cor4);
+}
+
+#p2 {
+    position: absolute;
+    top: 50px;
+    width: 100px;
+    color: var(--cor4);
+}
+
+#p3 {
+    position: absolute;
+    top: 80px;
+    width: 100px;
+    color: var(--cor4);
+}
+
+#p4 {
+    position: absolute;
+    top: 110px;
+    width: 100px;
+    color: var(--cor4);
+}
+
+#p5 {
+    position: absolute;
+    left: 200px;
+    top: 20px;
+    width: 100px;
+}
+
+#p6 {
+    position: absolute;
+    left: 200px;
+    top: 50px;
+    width: 100px;
+}
+
+#p7 {
+    position: absolute;
+    left: 200px;
+    top: 80px;
+    width: 100px;
+}
+
+
 
 
 
