--- a/estilos/style.css
+++ b/estilos/style.css
@@ -12,6 +12,7 @@
 * {
     margin: 0px;
     padding: 0px;
+    font-family: 'Noto Sans',Arial, Helvetica, sans-serif;
 }
 
 html, body {
@@ -58,7 +59,7 @@ nav > .link {
 }
 
 form > p {
-    color: var(--cor001);
+    color: var(--cor1);
     margin: 15px;
     }
 
@@ -79,13 +80,21 @@ form > p {
         box-shadow: 3px 3px 8px rgba(230, 227, 227, 0.296)
     }
 
+    form > h1 {
+        color: rgb(185, 185, 185);
+        font-size: 1.2vw;
+        
+    }
+
     section#formulario {
         padding: 50px;
+        color: var(--cor4);
     }
 
     #dev1 {
         position: relative;
         top: 250px; 
+        color: var(--cor1);
     }
 
     legend > p {
@@ -123,7 +132,7 @@ section > h1 {
 section > p {
     background-position: right center;
     line-height: 1.3em;
-    font-size: 1.1vw;
+    font-size: 1.0vw;
     position: relative;
     width: 400px;
     height: 150px;
@@ -158,7 +167,7 @@ div > h1 {
 }
 
 #parte3 > p {
-    font-size: 1.3vw;
+    font-size: 1.1vw;
     color: var(--cor3);
     position: relative;
     top: -570px;
@@ -173,7 +182,7 @@ div#caixa1 {
     left: 250px;
     width: 330px;
     height: 220px;
-    font-size: 1.3vw;
+    font-size: 1.1vw;
     border-radius: 10px;
     box-shadow: 6px 10px 13px 0px rgba(0, 0, 0, 0.248);
 }
@@ -185,7 +194,7 @@ div#caixa2 {
     left: 590px;
     width: 330px;
     height: 220px;
-    font-size: 1.3vw;
+    font-size: 1.1vw;
     border-radius: 10px;
     box-shadow: 6px 10px 13px 0px rgba(0, 0, 0, 0.248);
 }
@@ -197,7 +206,7 @@ div#caixa3 {
     left: 940px;
     width: 330px;
     height: 220px;
-    font-size: 1.3vw;
+    font-size: 1.1vw;
     border-radius: 10px;
     box-shadow: 6px 10px 13px 0px rgba(0, 0, 0, 0.248);
 }
@@ -236,7 +245,7 @@ div#caixa3 {
 
 #t1 {
     position: relative;
-    font-size: 1.1vw;
+    font-size: 0.9vw;
     top: -35px;
     left: 80px;
     width: 200px;
@@ -264,7 +273,7 @@ div#caixa3 {
 
 #t2 {
     position: relative;
-    font-size: 1.1vw;
+    font-size: 0.9vw;
     top: -35px;
     left: 80px;
     width: 200px;
@@ -292,7 +301,7 @@ div#caixa3 {
 
 #t3 {
     position: relative;
-    font-size: 1.1vw;
+    font-size: 0.9vw;
     top: -35px;
     left: 80px;
     width: 200px;
@@ -320,7 +329,7 @@ div#caixa3 {
 
 #t4 {
     position: relative;
-    font-size: 1.1vw;
+    font-size: 0.9vw;
     top: -35px;
     left: 80px;
     width: 200px;
@@ -348,7 +357,7 @@ div#caixa3 {
 
 #t5 {
     position: relative;
-    font-size: 1.1vw;
+    font-size: 0.9vw;
     top: -20px;
     left: 80px;
     width: 200px;
@@ -376,7 +385,7 @@ div#caixa3 {
 
 #t6 {
     position: relative;
-    font-size: 1.1vw;
+    font-size: 0.9vw;
     top: -35px;
     left: 80px;
     width: 200px;
@@ -447,7 +456,7 @@ button > p > strong {
 }
 
 #t7 {
-    font-size: 1.3vw;
+    font-size: 1.0vw;
     color: var(--cor3);
     position: relative;
     top: 60px;
@@ -517,7 +526,7 @@ footer {
 
 footer > h3 {
     position: absolute;
-    font-size: 0.6em;
+    font-size: 0.5em;
     top: 220px;
     left: 300px;
 }
@@ -543,7 +552,7 @@ footer > ul {
 #p1 {
     position: absolute;
     top: 20px;
-    width: 70px;
+    width: 100px;
     color: var(--cor4);
 }
 
@@ -579,7 +588,7 @@ footer > ul {
     position: absolute;
     left: 200px;
     top: 50px;
-    width: 100px;
+    width: 120px;
 }
 
 #p7 {
